# naming-bot

./: Cargo.toml  run.sh
src/: main.rs
