[package]
name = "naming_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
serenity = {  git="https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["full"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
